--- a/def/.gitignore
+++ b/def/.gitignore
@@ -1,4 +1,4 @@
-# This is a conventional .gitignore file for projects created with `bochka create`
+# This is a conventional .gitignore file for bochka projects
 
 # libraries
 /lib/
